feat(ask): deterministic [TOOLTIP_HINT] obtain-claims + vanilla-only enchant table (Wave 9)
- claimHintsText/appendClaimLines: obtain-ish questions scan purposeTooltip+jeiRaw for claim
  sentences (获得/领取/兑换/礼包/obtain/claim/exchange/unlock/loot) and prepend up to 3 low-confidence
  '（据 tooltip/JEI）' hints — 武刃炮景礼包 claim cited 21:39 only, missed 21:29
- enchantHintText: [ENCHANT_TABLE] now vanilla-only (minecraft:); mod weapons get no
  enchanting-table list (anvil/machine semantics per SK)
- single purposeTooltipFor capture per ask (was double TooltipCapture after Wave 9)
- lang x6: non-vanilla items -> do not assume Enchanting Table